Big refactoring: remove non essential maven deps.
- remove guava, immutables, vavr deps, incl. shading
- replace data classes from vavr with one impls and java 8, optional/stream
- simplify maven parent hierarchy
- version updates